--- a/home.html
+++ b/home.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Run npm init to get package.json file.</title>
     <link href="./css/main.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
   </head>
   <body>
     <header>
+      <img class="navbar-brand" src="./assets/logo.png" alt="Daily Sidekick Logo"></img>
       <h1>Home</h1>
     </header>
 
@@ -25,7 +26,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Daily SideKick</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,8 +44,7 @@
     </nav>
 
 
-    <section id="homePage" class="container">
-      <div class="wrapper">
+    <section id="homePage" class="container-fluid">
 
         <!-- Side Sub-Navigation -->
         <div class="well hidden-sm hidden-xs">
@@ -224,8 +223,6 @@
 
 
 
-
-      </div>
     </section>
     <footer>
       <p>Built by Justin Weber for Who knows what.</p>
