--- a/addressbook.html
+++ b/addressbook.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>Daily Sidekick App.</title>
     <link href="./css/main.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
   </head>
   <body>
     <header>
+      <img class="navbar-brand" src="./assets/logo.png" alt="Daily Sidekick Logo"></img>
       <h1>Addressbook</h1>
     </header>
 
@@ -25,7 +26,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Daily SideKick</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,59 +44,129 @@
     </nav>
 
 
-    <section id="addressbookPage">
-      <div class="wrapper">
+    <section id="addressbookPage" class="container-fluid">
+      <div class="row">
 
-      <!--/////////////////////////////////////////////-->
-      <!-- Contact list Section -->
-      <!--/////////////////////////////////////////////-->
-
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-
-      <!--/////////////////////////////////////////////-->
-      <!-- Search field w/Add Btn -->
-      <!--/////////////////////////////////////////////-->
-
-      <!-- Search Box -->
-      <form action="">
-        <label for="name"></label>
-        <input type="text" name="name" value="">
-      </form>
-
-      <!-- Add Icon -->
-      <img class="custom-icon" src="./assets/add-icon.png" alt="Add Icon">
-
-      <!--/////////////////////////////////////////////-->
-      <!-- Selected contact info Section -->
-      <!--/////////////////////////////////////////////-->
-
-      <!-- Contacts profile pic. -->
-      <img src="" alt="Image of selected contact">
-
-      <!-- Edit Icon -->
-      <img class="custom-icon" src="./assets/edit-icon.png" alt="Edit Icon">
-
-      <!-- Inputs with contact details -->
-      <form action="">
-        <label for="name">Name</label>
-        <input type="text" name="name" value="">
-
-        <label for="phone">Phone #</label>
-        <input type="phone" name="phone" value="">
-
-        <label for="email">Email</label>
-        <input type="email" name="email" value="">
-      </form>
+        <aside id="searchArea1" class="container">
+          <!-- Search Box -->        
+            <div class="hidden-md hidden-lg col-xs-12">
+              <form id="searchContacts1"action="" method="GET">
+                <div class="input-group">
+                  <input id="searchInput" type="text" class="form-control" placeholder="Search" id="txtSearch"/>
+                </div>
+              </form>
+            </div>
+        </aside>
 
 
+        <!--Small Screen Add Icon -->
+       <div id="smallScreenAdd"class="addBtn hidden-md hidden-lg">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#addContactModal"></button>
+        </div>
+
+
+        <!--/////////////////////////////////////////////-->
+        <!-- Contact list Section -->
+        <!--/////////////////////////////////////////////-->
+        <section id="contactSection"class="col-xs-12 col-md-6">
+          <ul id="contactList">
+            <li><span><img class="custom-icon" src="./assets/edit-icon.png" alt="Edit Icon"></span>Bob</li>
+            <li><span><img class="custom-icon" src="./assets/edit-icon.png" alt="Edit Icon"></span>Gary</li>
+          </ul>
+        </section>
+
+
+        <!--/////////////////////////////////////////////-->
+        <!-- Search field w/Add Btn -->
+        <!--/////////////////////////////////////////////-->
+        <aside id="searchArea2" class="hidden-xs hidden-sm col-xs-6">
+          <!-- Search Box -->
+          <form id="searchContacts2"action="" method="GET">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search" id="txtSearch"/>
+              <div id="largeScreenAdd"class="addBtn input-group-btn">
+                <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#addContactModal"></button>
+                </button>
+              </div>
+            </div>
+          </form>
+        </aside>
+
+
+        <!--/////////////////////////////////////////////-->
+        <!-- Selected contact info Section -->
+        <!--/////////////////////////////////////////////-->
+
+        <!-- This will only be visible on large screens -->
+        <!-- Will become a modal on smaller screens -->
+        <section id="contactInfoSection" class="hidden-xs hidden-sm col-xs-12 col-md-6">
+          <!-- Contacts profile pic. -->
+          <p id="circle" src="not-found.png"></p>
+
+          <!-- Edit Icon -->
+          <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editContactModal"></button>
+
+          <!-- Inputs with contact details -->
+          <form>
+            <div class="form-group row">
+              <div id="contactName" class="col-sm-12 col-md-6">
+                <label for="name">Name</label>
+                <input type="text" name="name" value="">
+              </div>
+              <div id="contactPhone" class="col-sm-12 col-md-6">
+                <label for="phone">Phone #</label>
+                <input type="phone" name="phone" value="">
+              </div>
+            </div>
+            <div class="form-group row">
+              <div id="contactEmail" class="col-md-12">
+                <label for="email">Email</label>
+                <input type="email" name="email" value="">
+              </div>
+            </div>
+          </form>
+        </section>
       </div>
+
+      <!-- Modal for add contact -->
+      <div class="modal fade" id="addContactModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Add Contact</h4>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal for edit contact -->
+      <div class="modal fade" id="editContactModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Edit Contact</h4>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </section>
     <footer>
       <p>Built by Justin Weber for Project and Portfolio IV.</p>
