--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- If using this local comment out this meta. This is to handle Mixed content error on github page. -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Daily Sidekick App</title>
     <link href="./css/main.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
